src/renderer/src/assets/main.css
:root {
  --primary-hue: 220;
  --primary-sat: 51.7%;
  --primary-brightness: 11.4%;
  --secondary-brightness: 22%;
  --tertiary-sat: 76%;
  --tertiary-lightness: 20%;
  --hover-lightness: 30%;
  --background-brightness: 3%;
  --primary-color: hsl(var(--primary-hue), var(--primary-sat), var(--primary-brightness));
  --secondary-color: hsl(var(--primary-hue), var(--primary-sat), var(--secondary-brightness));
  --tertiary-color: hsl(var(--primary-hue), var(--tertiary-sat), var(--tertiary-lightness));
  --background-color: hsl(var(--primary-hue), var(--primary-sat), var(--background-brightness));
  --button-warning-color: hsl(0, var(--primary-sat), 35%, 1);
  --lighter-text-color: hsl(var(--primary-hue), var(--tertiary-sat), 84%);
  --lightest-text-color: hsl(var(--primary-hue), var(--tertiary-sat), 100%);
  --text-highlight-color: hsl(var(--primary-hue), var(--primary-sat), 35%);
  --text-highlighted-color: hsl(var(--primary-hue), var(--primary-sat), 95%);
  --squarcle-radius: 6px;
}

body,
html {
  width: 100%;
  height: 100%;
  margin: 0px;
  background: var(--background-color);
  font-family: sans-serif;
}

input,
textarea,
select {
  background: var(--background-color);
  border: 1px solid rgb(129 155 255 / 50%);
  border-radius: 4px;
  padding: 8px;
  color: white;
  font-size: 14px;
  font-family: Arial, Helvetica, sans-serif;
}
input:focus,
textarea:focus,
select:focus, button:focus {
  outline-color:  rgb(129 155 255 / 70%);
}

p {
  line-height: 1.6;
  margin: 0px;
}

button {
  border-radius: 8px;
  padding: 10px;
  border: none;
  background: var(--secondary-color);
  color: var(--lightest-text-color);
  cursor: pointer;
  display: flex;
  align-items: anchor-center;
  justify-content: center;
}

button.warning {
  background: var(--button-warning-color) !important;
}

button.no-style {
  border-radius: none;
  padding: 0px;
  background: none;
  color: none;
  align-items: unset;
  justify-content: unset;
}
button.no-style svg{
  margin:0px !important;
}
.pane-gap{
  display:flex;
  flex-direction: column;
  justify-content: center;
}
.pane-gap button svg{
  color:var(--text-highlight-color);
}

button.darkest {
  background: var(--primary-color) !important;
}


button svg {
  margin-right: 8px;
}

button:disabled {
  cursor: unset;
  color: grey;
  background-color: #14223e;

}

button:disabled span {
  margin-right: 8px;
}

button.icon {
  padding: 4px;
}

button.icon svg {
  margin: 0px;
}

button {
  transition: all 0.15s;
}

button:hover {
  filter: brightness(130%);
}

#root {
  width: 100%;
  height: 100%;
  display: flex;
  gap: 0px;
  padding: 10px;
  padding-left: 0px;
  box-sizing: border-box;
}

.siteSelector {
  background-color: var(--primary-color);
  border-radius: 6px;
  padding: 10px;
  display: flex;
  flex-direction: column;
  min-width: 300px;
}

.siteSelector .siteInfo {
  display: flex;
  align-items: center;
  padding: 14px;
  cursor: pointer;
  justify-content: flex-start;
  gap: 8px;
  background: none;
}

.siteSelector .siteInfo .favicon-container {
  width: 25px;
  height: 25px;
  margin-right: 8px;
}

.siteSelector .siteInfo .info {
  font-family: sans-serif;
  font-size: 16px;
  color: var(--lighter-text-color);
}



.sidebar {
  width: 215px;
  min-width:215px;
  overflow:hidden;
  transition:width 0.4s, min-width 0.4s, padding 0.2s;
  transition-timing-function: ease;
  padding-left:10px;
}
.sidebar .container{
  background-color: var(--primary-color);
  border-radius: var(--squarcle-radius);
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  gap: 20px;
  width:215px;
  min-width:215px;
  height:100%;
  padding:10px;
}
.sidebar.collapsed{
  width:0px;
  min-width: 0px;
  padding-left:0px;
}
#root:has(.pane-gap:hover) .sidebar.collapsed, .sidebar.collapsed:hover{
  width:215px;
  min-width:215px;
  padding-left:10px;
}


.sidebar .siteInfo {
  padding: 14px;
  background-color: var(--secondary-color);
  display: flex;
  flex-direction: row;
  box-sizing: border-box;
  border-radius: 14px;
  cursor: pointer;
  gap: 12px;
}

.sidebar .siteInfo .infoContainer {
  display: flex;
  flex-grow: 1;
  gap: 12px;
}

.sidebar .siteInfo button.exit {
  height: 30px;
  width: 30px;
}

.sidebar .siteInfo .favicon-container .favicon {
  width: 30px;
  height: 30px;
  border-radius: 100%;
}

.favicon-container .favicon img {
  width: 100%;
  border-radius: 4%;
  box-shadow: -1px 1px 2px 1px hsl(218.64deg 57.07% 16.02% / 98%);
}

.sidebar .siteInfo .favicon-container .favicon.no-icon {
  background: grey;
}

.sidebar .siteInfo .info {
  font-size: 7px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-grow: 1;
}

.sidebar .siteInfo .info h1 {
  font-size: 14px;
  color: var(--lighter-text-color);
  font-family: sans-serif;
  font-weight: 500;
  padding: 0px;
  margin: 0px;
  text-align: left;
}

.sidebar .siteInfo .info button {
  padding: 5px;
}

.sidebar .siteInfo .info button svg {
  margin-right: 0px;
}

.sidebar ul {
  padding-inline-start: 0px;
  list-style-type: none;
  flex-grow: 1;
  margin: 0px;
  margin-left: 14px;
  margin-right: 14px;
}

.sidebar ul li {
  height: fit-content;
  color: var(--lightest-text-color);
  font-size: 14px;
  border-bottom: 1px solid #162748;
  font-weight: 100;
}

.sidebar ul li.parent {
  display: flex;
  border-bottom: none;
}

.sidebar ul li button.parent {
  flex-grow: 1;
  display: flex;
  align-items: anchor-center;
  font-size: 18px;
  font-weight: 400;
  padding-top: 16px;
  padding-left: 0px;
  padding-right: 0px;
  padding-bottom: 16px;
  background: none;
}

.sidebar ul li button.parent:focus button {
  visibility: visible;
}

.sidebar ul li button.parent:focus-within button {
  visibility: visible;
}

.sidebar ul li span.collectionLabel {
  color: var(--lighter-text-color);
  padding-left: 0.7em;
}

.sidebar ul li span {
  display: inline-block;
  word-break: break-word;
  text-indent: 0em;
  padding-left: 2em;
}
/* ... */

